<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tanpn.messenger.ui.ActivityAddEvent"
    android:background="#ffffff">


    <EditText
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:id="@+id/edtComment"
        android:hint="@string/event_hint"
        android:background="@drawable/custom_edittext"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="5dp" />



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout"
        android:gravity="bottom">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="Quay lại"
            android:background="@drawable/rectangle_button"
            android:id="@+id/btnBack"
            android:onClick="onClick"
            android:layout_margin="0dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:text="Lưu"
            android:background="@drawable/rectangle_button"
            android:id="@+id/btnSave"
            android:onClick="onClick"
            android:layout_margin="0dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtComment"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:id="@+id/linearLayout2">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/circle_button"
            android:text="@string/event_picture"
            android:id="@+id/btnPicture"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/circle_button"
            android:text="@string/event_voice"
            android:id="@+id/btnVoice"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/circle_button"
            android:text="@string/event_video"
            android:id="@+id/btnVideo"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/circle_button"
            android:text="@string/event_remind"
            android:id="@+id/btnRemind"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp" />
    </LinearLayout>

    <GridView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gridView"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/linearLayout"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

</RelativeLayout>
