<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/colorDialogGridLayout"
    android:background="#FFF">

    <View
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/colorView"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/colorView"
        android:layout_centerHorizontal="true"
        android:columnCount="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_alpha"
            android:id="@+id/alphatextView"
            android:layout_column="0"
            android:layout_gravity="center_vertical|right"
            android:layout_row="0"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_margin="10dp" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/alphaSeekBar"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0"
            android:max="255"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_margin="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_red"
            android:id="@+id/redtextView"
            android:layout_column="0"
            android:layout_gravity="center_vertical|right"
            android:layout_row="1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_margin="10dp" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/redSeekBar"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_gravity="fill_horizontal"
            android:max="255"
            android:indeterminate="false"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_margin="10dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_green"
            android:id="@+id/greentextView"
            android:layout_gravity="center_vertical|right"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_margin="10dp" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/greenSeekBar"
            android:layout_gravity="fill_horizontal"
            android:layout_column="1"
            android:layout_row="2"
            android:max="255"
            android:indeterminate="false"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_margin="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_blue"
            android:id="@+id/bluetextView"
            android:layout_gravity="center_vertical|right"
            android:layout_column="0"
            android:layout_row="3"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_margin="10dp" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/blueSeekBar"
            android:layout_gravity="fill_horizontal"
            android:layout_column="1"
            android:layout_row="3"
            android:max="255"
            android:indeterminate="false"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_margin="10dp" />
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"/>
    </GridLayout>


</RelativeLayout>
